--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -63,4 +63,38 @@
         android:layout_below="@+id/showLongitude"
         android:text="0.0" />
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_below="@+id/textView3"
+        android:text="address" />
+
+    <TextView
+        android:id="@+id/showAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView4"
+        android:layout_alignBottom="@+id/textView4"
+        android:layout_alignLeft="@+id/showLatitude"
+        android:text="-" />
+
+    <TextView
+        android:id="@+id/showAddressHiragana"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/showAddress"
+        android:layout_below="@+id/showAddress"
+        android:text="-" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/showAddressHiragana"
+        android:layout_alignBottom="@+id/showAddressHiragana"
+        android:layout_alignLeft="@+id/textView4"
+        android:text="hiragana" />
+
 </RelativeLayout>
