--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,14 +8,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
-
     <Button
         android:id="@+id/location"
         android:layout_width="wrap_content"
@@ -97,14 +89,42 @@
         android:layout_alignLeft="@+id/textView4"
         android:text="hiragana" />
 
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_below="@+id/textView5"
+        android:text="status" />
+
+    <TextView
+        android:id="@+id/showStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_alignLeft="@+id/showAddressHiragana"
+        android:layout_alignRight="@+id/showLatitude"
+        android:text="-" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/showStatus"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="45dp"
+        android:text="@string/hello_world"
+        android:textSize="10sp" />
+
     <CheckBox
         android:id="@+id/auto_speaking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_alignRight="@+id/textView1"
+        android:layout_alignLeft="@+id/showStatus"
         android:layout_below="@+id/textView1"
+        android:layout_marginTop="16dp"
         android:onClick="onAutoSpeakingCheck"
-        android:text="Auto speaking" />
+        android:text="@string/checkbox_autospeak" />
 
 </RelativeLayout>
