--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -90,28 +90,10 @@
         android:text="hiragana" />
 
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_below="@+id/textView5"
-        android:text="status" />
-
-    <TextView
-        android:id="@+id/showStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView6"
-        android:layout_alignBottom="@+id/textView6"
-        android:layout_alignLeft="@+id/showAddressHiragana"
-        android:layout_alignRight="@+id/showLatitude"
-        android:text="-" />
-
-    <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/showStatus"
+        android:layout_below="@+id/textView5"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="45dp"
         android:text="@string/hello_world"
@@ -121,10 +103,26 @@
         android:id="@+id/auto_speaking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/showStatus"
+        android:layout_alignLeft="@+id/showAddressHiragana"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="16dp"
         android:onClick="onAutoSpeakingCheck"
         android:text="@string/checkbox_autospeak" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_below="@+id/textView5"
+        android:text="GPS" />
+
+    <TextView
+        android:id="@+id/showGpsStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/showAddressHiragana"
+        android:layout_below="@+id/showAddressHiragana"
+        android:text="initialize" />
 
 </RelativeLayout>
