--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,16 +8,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <Button
-        android:id="@+id/location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="36dp"
-        android:onClick="onSpeak"
-        android:text="@string/button_speak" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -93,36 +83,63 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView5"
+        android:layout_below="@+id/showGpsStatus"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="70dp"
         android:text="@string/hello_world"
         android:textSize="10sp" />
 
-    <CheckBox
-        android:id="@+id/auto_speaking"
+    <TextView
+        android:id="@+id/showSpeed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView7"
+        android:layout_alignBottom="@+id/textView7"
         android:layout_alignLeft="@+id/showAddressHiragana"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="16dp"
-        android:onClick="onAutoSpeakingCheck"
-        android:text="@string/checkbox_autospeak" />
+        android:text="0.0 km/h" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_below="@+id/textView5"
+        android:layout_alignLeft="@+id/textView7"
+        android:layout_below="@+id/textView7"
         android:text="GPS" />
 
     <TextView
         android:id="@+id/showGpsStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/showAddressHiragana"
-        android:layout_below="@+id/showAddressHiragana"
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_alignLeft="@+id/showSpeed"
         android:text="initialize" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_below="@+id/textView5"
+        android:text="speed" />
+
+    <CheckBox
+        android:id="@+id/auto_speaking"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/showGpsStatus"
+        android:layout_below="@+id/textView1"
+        android:onClick="onAutoSpeakingCheck"
+        android:text="@string/checkbox_autospeak" />
+
+    <Button
+        android:id="@+id/speak"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/auto_speaking"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:onClick="onSpeak"
+        android:text="@string/button_speak" />
 
 </RelativeLayout>
